[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/HUD/HUD_background_night.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/hud_items_night.sprites/life.tres" type="Texture" id=3]
[ext_resource path="res://assets/HUD/hud_items_night.sprites/shield.tres" type="Texture" id=4]
[ext_resource path="res://assets/HUD/hud_items_night.sprites/heart.tres" type="Texture" id=5]
[ext_resource path="res://assets/HUD/shield_bar_night_empty.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/shield_bar_night_fill.png" type="Texture" id=7]
[ext_resource path="res://assets/HUD/hud_items_night.sprites/laser.tres" type="Texture" id=8]
[ext_resource path="res://assets/HUD/hud_items.sprites/lazer_icon.tres" type="Texture" id=9]
[ext_resource path="res://assets/fonts/Early GameBoy.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/HUD/hud_items_night.sprites/missile.tres" type="Texture" id=11]
[ext_resource path="res://assets/HUD/hud_items.sprites/hoaming_missil_icon.tres" type="Texture" id=12]
[ext_resource path="res://assets/HUD/hud_items_night.sprites/arrasa_quarterao.tres" type="Texture" id=13]
[ext_resource path="res://assets/HUD/hud_items.sprites/super_duper_icon.tres" type="Texture" id=14]
[ext_resource path="res://assets/HUD/hud_items_night.sprites/hoaming_defense.tres" type="Texture" id=15]
[ext_resource path="res://assets/HUD/hud_items_night.sprites/area_attack.tres" type="Texture" id=16]
[ext_resource path="res://assets/HUD/hud_items_night.sprites/score.tres" type="Texture" id=17]
[ext_resource path="res://assets/fonts/ashooterpixelfon.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://assets/HUD/lifebar_boss.png" type="Texture" id=19]
[ext_resource path="res://assets/HUD/lifebar_boss_fill.png" type="Texture" id=20]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 18 )

[node name="HUD" type="CanvasLayer" groups=[
"HUD",
]]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Life" type="Sprite" parent="."]
position = Vector2( 1, 3 )
texture = ExtResource( 3 )
centered = false

[node name="Shield" type="Sprite" parent="."]
position = Vector2( 1, 11 )
texture = ExtResource( 4 )
centered = false

[node name="hearts" type="Node2D" parent="."]
position = Vector2( -2, 0 )

[node name="heart0" type="Sprite" parent="hearts"]
position = Vector2( 27, 3 )
texture = ExtResource( 5 )
centered = false

[node name="heart1" type="Sprite" parent="hearts"]
position = Vector2( 35, 3 )
texture = ExtResource( 5 )
centered = false

[node name="heart2" type="Sprite" parent="hearts"]
visible = false
position = Vector2( 43, 3 )
texture = ExtResource( 5 )
centered = false

[node name="heart3" type="Sprite" parent="hearts"]
visible = false
position = Vector2( 51, 3 )
texture = ExtResource( 5 )
centered = false

[node name="heart4" type="Sprite" parent="hearts"]
visible = false
position = Vector2( 59, 3 )
texture = ExtResource( 5 )
centered = false

[node name="heart5" type="Sprite" parent="hearts"]
visible = false
position = Vector2( 67, 3 )
texture = ExtResource( 5 )
centered = false

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 38.0
margin_top = 11.0
margin_right = 78.0
margin_bottom = 16.0
max_value = 4.0
value = 4.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )

[node name="secondary_weapons" type="Node2D" parent="."]
position = Vector2( -2, 0 )

[node name="lazer" type="Node2D" parent="secondary_weapons"]
position = Vector2( 101, 6 )

[node name="Sprite" type="Sprite" parent="secondary_weapons/lazer"]
position = Vector2( -4, -2 )
scale = Vector2( 0.777778, 1 )
texture = ExtResource( 8 )
centered = false

[node name="ColorRect" type="ColorRect" parent="secondary_weapons/lazer"]
visible = false
margin_left = -6.0
margin_top = -4.0
margin_right = 3.0
margin_bottom = 3.0
color = Color( 0.0588235, 0.219608, 0.0588235, 1 )

[node name="reverse_sprite" type="Sprite" parent="secondary_weapons/lazer"]
visible = false
position = Vector2( -5, -2 )
scale = Vector2( 0.777778, 1 )
texture = ExtResource( 9 )
centered = false

[node name="LazerCount" type="Label" parent="secondary_weapons/lazer"]
margin_left = 4.0
margin_top = -5.0
margin_right = 44.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "6"

[node name="missle" type="Node2D" parent="secondary_weapons"]
position = Vector2( 79, 3 )

[node name="Sprite" type="Sprite" parent="secondary_weapons/missle"]
scale = Vector2( 0.875, 1 )
texture = ExtResource( 11 )
centered = false

[node name="ColorRect" type="ColorRect" parent="secondary_weapons/missle"]
margin_left = -1.0
margin_top = -1.0
margin_right = 8.0
margin_bottom = 6.0
color = Color( 0.0588235, 0.219608, 0.0588235, 1 )

[node name="reverse_sprite" type="Sprite" parent="secondary_weapons/missle"]
position = Vector2( -1, 0 )
scale = Vector2( 0.888889, 1 )
texture = ExtResource( 12 )
centered = false

[node name="missle_count" type="Label" parent="secondary_weapons/missle"]
margin_left = 9.0
margin_top = -2.0
margin_right = 49.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "9"

[node name="supa_dupa" type="Node2D" parent="secondary_weapons"]
position = Vector2( 113, 3 )

[node name="Sprite" type="Sprite" parent="secondary_weapons/supa_dupa"]
scale = Vector2( 0.888889, 0.625 )
texture = ExtResource( 13 )
centered = false

[node name="ColorRect" type="ColorRect" parent="secondary_weapons/supa_dupa"]
visible = false
margin_left = -1.0
margin_top = -1.0
margin_right = 9.0
margin_bottom = 6.0
color = Color( 0.0588235, 0.219608, 0.0588235, 1 )

[node name="reverse_sprite" type="Sprite" parent="secondary_weapons/supa_dupa"]
visible = false
scale = Vector2( 0.888889, 0.625 )
texture = ExtResource( 14 )
centered = false

[node name="sd_count" type="Label" parent="secondary_weapons/supa_dupa"]
margin_left = 9.90842
margin_top = -2.34701
margin_right = 49.9084
margin_bottom = 20.653
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "3
"

[node name="shield_protector" type="Node2D" parent="secondary_weapons"]
visible = false
position = Vector2( 115, 28 )

[node name="Sprite" type="Sprite" parent="secondary_weapons/shield_protector"]
visible = false
texture = ExtResource( 15 )
centered = false

[node name="sp_count" type="Label" parent="secondary_weapons/shield_protector"]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="multi_dir" type="Node2D" parent="secondary_weapons"]
visible = false
position = Vector2( 106, 25 )

[node name="Sprite" type="Sprite" parent="secondary_weapons/multi_dir"]
visible = false
texture = ExtResource( 16 )
centered = false

[node name="multi_dir_count" type="Label" parent="secondary_weapons/multi_dir"]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="Score" type="Node2D" parent="."]
position = Vector2( 131, 3 )

[node name="Sprite" type="Sprite" parent="Score"]
texture = ExtResource( 17 )
centered = false

[node name="Score_count" type="Label" parent="Score"]
margin_top = 1.0
margin_right = 37.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "0"

[node name="bossu_life" type="TextureProgress" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -8.0
margin_right = 3.0
margin_bottom = -3.0
texture_under = ExtResource( 19 )
texture_progress = ExtResource( 20 )
